--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -8,7 +8,7 @@
 pre, code {
 	color: #4A7E86;
 	background-color: #fff;
-	padding-left: .5em;
+	//padding-left: .5em;
 	padding-right: .5em;
  }
   
